picker issue and windowWidth with scrollbar issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -366,7 +366,6 @@
   position: absolute;
   left: 0;
   top: 102px;
-  z-index: 3;
   transform: translate3d(0, 0, 0);
 }
 
